--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mon": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
