--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "mon": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www -i ./public/data"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
