--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "mongoose": "^5.2.4",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.2"
+    "nodemon": "^1.18.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
